JoltPhysicsC/JoltC/JoltPhysicsC.h

typedef uint32_t JPC_SubShapeID;
typedef struct JPC_Shape               JPC_Shape;
typedef struct JPC_PhysicsMaterial JPC_PhysicsMaterial;
// NOTE: Needs to be kept in sync with JPH::AABox
typedef struct JPC_AABox
{
    alignas(16) float   min[4]; // 4th element is ignored
    alignas(16) float   max[4]; // 4th element is ignored
} JPC_AABox;
JPC_API void
JPC_Shape_GetCenterOfMass(const JPC_Shape *in_shape, float out_center_of_mass[3]);
JPC_API JPC_AABox
JPC_Shape_GetLocalBounds(const JPC_Shape *in_shape);
JPC_API uint32_t
JPC_Shape_GetSubShapeIDBitsRecursive(const JPC_Shape *in_shape);
JPC_API JPC_AABox
JPC_Shape_GetWorldSpaceBounds(const JPC_Shape *in_shape,
                              const float in_center_of_mass_transform[16],
                              const float in_scale[3]);
JPC_API float
JPC_Shape_GetInnerRadius(const JPC_Shape *in_shape);
// TODO
//JPC_API void
//JPC_Shape_GetMassProperties(const JPC_Shape *in_shape, JPC_MassProperties* out_mass_properties);

JPC_API const JPC_PhysicsMaterial *
JPC_Shape_GetMaterial(const JPC_Shape *in_shape, JPC_SubShapeID in_sub_shape_id);