jolt-java-headers/src/main/java/jolt/headers/constants$46.java

// Generated by jextract

package jolt.headers;

import java.lang.invoke.MethodHandle;
import java.lang.invoke.VarHandle;
import java.nio.ByteOrder;
import java.lang.foreign.*;
import static java.lang.foreign.ValueLayout.*;
class constants$46 {

    static final FunctionDescriptor JPC_Shape_GetCenterOfMass$FUNC = FunctionDescriptor.ofVoid(
        Constants$root.C_POINTER$LAYOUT,
        Constants$root.C_POINTER$LAYOUT
    );
    static final MethodHandle JPC_Shape_GetCenterOfMass$MH = RuntimeHelper.downcallHandle(
        "JPC_Shape_GetCenterOfMass",
        constants$46.JPC_Shape_GetCenterOfMass$FUNC
    );
    static final FunctionDescriptor JPC_Shape_GetLocalBounds$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
        MemoryLayout.sequenceLayout(4, Constants$root.C_FLOAT$LAYOUT).withName("min"),
        MemoryLayout.sequenceLayout(4, Constants$root.C_FLOAT$LAYOUT).withName("max")
    ).withName("JPC_AABox"),
        Constants$root.C_POINTER$LAYOUT
    );
    static final MethodHandle JPC_Shape_GetLocalBounds$MH = RuntimeHelper.downcallHandle(
        "JPC_Shape_GetLocalBounds",
        constants$46.JPC_Shape_GetLocalBounds$FUNC
    );
    static final FunctionDescriptor JPC_Shape_GetSubShapeIDBitsRecursive$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
        Constants$root.C_POINTER$LAYOUT
    );
    static final MethodHandle JPC_Shape_GetSubShapeIDBitsRecursive$MH = RuntimeHelper.downcallHandle(
        "JPC_Shape_GetSubShapeIDBitsRecursive",
        constants$46.JPC_Shape_GetSubShapeIDBitsRecursive$FUNC
    );
    static final FunctionDescriptor JPC_Shape_GetWorldSpaceBounds$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
        MemoryLayout.sequenceLayout(4, Constants$root.C_FLOAT$LAYOUT).withName("min"),
        MemoryLayout.sequenceLayout(4, Constants$root.C_FLOAT$LAYOUT).withName("max")
    ).withName("JPC_AABox"),
        Constants$root.C_POINTER$LAYOUT,
        Constants$root.C_POINTER$LAYOUT,
        Constants$root.C_POINTER$LAYOUT
    );
    static final MethodHandle JPC_Shape_GetWorldSpaceBounds$MH = RuntimeHelper.downcallHandle(
        "JPC_Shape_GetWorldSpaceBounds",
        constants$46.JPC_Shape_GetWorldSpaceBounds$FUNC
    );
    static final FunctionDescriptor JPC_Shape_GetInnerRadius$FUNC = FunctionDescriptor.of(Constants$root.C_FLOAT$LAYOUT,
        Constants$root.C_POINTER$LAYOUT
    );
    static final MethodHandle JPC_Shape_GetInnerRadius$MH = RuntimeHelper.downcallHandle(
        "JPC_Shape_GetInnerRadius",
        constants$46.JPC_Shape_GetInnerRadius$FUNC
    );
    static final FunctionDescriptor JPC_Shape_GetMaterial$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
        Constants$root.C_POINTER$LAYOUT,
        Constants$root.C_INT$LAYOUT
    );
    static final MethodHandle JPC_Shape_GetMaterial$MH = RuntimeHelper.downcallHandle(
        "JPC_Shape_GetMaterial",
        constants$46.JPC_Shape_GetMaterial$FUNC
    );
}


